@@ -55,6 +55,10 @@ readReut21578XML <- readXML(spec = list(Author = list("node", "/REUTERS/TEXT/AUT
                             Description = list("unevaluated", ""),
                             Heading = list("node", "/REUTERS/TEXT/TITLE"),
                             ID = list("attribute", "/REUTERS/@NEWID"),
+                            TOPICS = list("attribute", "/REUTERS/@TOPICS"),
+                            LEWISSPLIT = list("attribute", "/REUTERS/@LEWISSPLIT"),
+                            CGISPLIT = list("attribute", "/REUTERS/@CGISPLIT"),
+                            OLDID = list("attribute", "/REUTERS/@OLDID"),
                             Origin = list("unevaluated", "Reuters-21578 XML"),
                             Topics = list("node", "/REUTERS/TOPICS/D"),
                             Places = list("node", "/REUTERS/PLACES/D"),
@@ -72,6 +76,10 @@ readReut21578XMLasPlain <- readXML(spec = list(Author = list("node", "/REUTERS/T
                                    Description = list("unevaluated", ""),
                                    Heading = list("node", "/REUTERS/TEXT/TITLE"),
                                    ID = list("attribute", "/REUTERS/@NEWID"),
+                                   TOPICS = list("attribute", "/REUTERS/@TOPICS"),
+                                   LEWISSPLIT = list("attribute", "/REUTERS/@LEWISSPLIT"),
+                                   CGISPLIT = list("attribute", "/REUTERS/@CGISPLIT"),
+                                   OLDID = list("attribute", "/REUTERS/@OLDID"),
                                    Origin = list("unevaluated", "Reuters-21578 XML"),
                                    Topics = list("node", "/REUTERS/TOPICS/D"),
                                    Places = list("node", "/REUTERS/PLACES/D"),
